--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   logger: any  #for logging purpose
   flutter_riverpod: ^2.3.0
   skeletons: ^0.0.3
+  go_router: ^6.2.0
 
 dev_dependencies:
   flutter_test:
