--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@
 .history
 .svn/
 migrate_working_dir/
-
 # IntelliJ related
 *.iml
 *.ipr
@@ -23,7 +22,6 @@ migrate_working_dir/
 
 # Flutter/Dart/Pub related
 **/doc/api/
-**/.g.dart
 **/ios/Flutter/.last_build_id
 .dart_tool/
 .flutter-plugins
@@ -32,6 +30,10 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
+
+# Generated Dart files
+**/*.g.dart
+
 
 # Symbolication related
 app.*.symbols
